--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>7.11.0</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <dependency>
@@ -53,5 +53,4 @@
             <version>5.1.2</version>
         </dependency>
     </dependencies>
-
 </project>
